     The OVS tree remains hosted on GitHub.
     https://github.com/openvswitch/ovs.git
   - ovs-appctl:
     * Added new option [-f|--format] to choose the output format, e.g. 'json'
       or 'text' (by default).
     * Added new option [--pretty] to print JSON output in a readable fashion.
       E.g. members of objects and elements of arrays are printed one per line,
       with indentation.
   - Python:
     * Added support for choosing the output format, e.g. 'json' or 'text'.
     * Added new option [--pretty] to print JSON output in a readable fashion.
       E.g. members of objects and elements of arrays are printed one per line,
       with indentation.


v3.3.0 - 16 Feb 2024
--------------------
   - OVSDB:
     * Support pre-vote mechanism in RAFT that protects the cluster against
       disruptive servers (section 9.6 of the original RAFT paper).  Upgrading
       from older version is supported but it may trigger more leader elections
       during the process, and error logs complaining unrecognized fields may
       be observed on old nodes.
     * New command line option --config-file that allows a fine control over
       remotes and database configuration, including setting options for
       connection methods for relays and active-backup replication.
       For more details see ovsdb-server(1) and ovsdb(7).
     * Make use of cooperative multitasking to improve maintenance of RAFT
       cluster during long running processing such as online schema conversion.
   - OpenFlow:
     * NXT_CT_FLUSH extension is updated to support flushing connections
       based on mark and labels.  'ct-flush' command of ovs-ofctl updated
       to support these new arguments accordingly.
   - ovs-appctl:
     * 'ofproto/trace' now reports OpenFlow rules that make up a conjunctive
       flow match.
     * Output of 'dpctl/show' command no longer shows interface configuration
       status, only values of the actual configuration options, a.k.a.